# esp32p4_HMI_screen

./: .gitignore  .lvgl-live-preview.json  CMakeLists.txt  README.md  build.sh  partitions.csv  sdkconfig  sdkconfig.defaults
docs/: CODE_REVIEW.md  LVGL_IMPLEMENTATION_PLAN.md  UI_ALARM_MATRIX.md  UI_DESIGN_BRIEF.md  UI_SCREENS.md  UI_SPEC.md  UI_TOKENS.md  hmi_data_config.md  mqtt_config.md  ro_plant_system_spec_v2.md
docs/api/: README.md  SYNC_NOTES.md  asyncapi.yaml  openapi.yaml
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  doc_CMakeLists.md  doc_Kconfig.md  doc_app_main.md  doc_idf_component.md  idf_component.yml
main/board/: board.h  board_i2c.c  board_i2c.h  display_init.c  display_init.h  doc_board_h.md  doc_display_init.md  doc_touch_init.md  touch_init.c  touch_init.h
main/data/: alarm_ring.c  alarm_ring.h  doc_alarm_ring.md  doc_plant_data.md  nvs_worker.c  nvs_worker.h  plant_data.c  plant_data.h  plant_data_internal.h
main/fonts/: Montserrat_12_4.c  Montserrat_14_4.c  Montserrat_16_4.c  Montserrat_18_4.c  Montserrat_20_4.c  Montserrat_22_4.c  Montserrat_24_4.c  Montserrat_28_4.c  Montserrat_36_4.c  doc_ui_fonts.md  ui_fonts.h
main/i18n/: doc_i18n.md  lang.c  lang.h  lang_en.c  lang_ru.c  lang_strings.h
main/mqtt/: doc_mqtt_app.md  doc_mqtt_parser.md  doc_mqtt_topics.md  mqtt_app.c  mqtt_app.h  mqtt_parser.c  mqtt_parser.h  mqtt_topics.h
main/net/: doc_eth_init.md  eth_init.c  eth_init.h
main/ui/: doc_ui_common.md  doc_ui_events.md  doc_ui_main.md  doc_ui_theme.md  lvgl_preview.c  ui_common.c  ui_common.h  ui_equipment_modal.c  ui_equipment_modal.h  ui_events.c  ui_events.h  ui_filter.c  ui_filter.h  ui_main.c  ui_main.h  ui_membrane.c  ui_membrane.h  ui_modal.c  ui_modal.h  ui_pipe.c  ui_pipe.h  ui_pump.c  ui_pump.h  ui_sensor.c  ui_sensor.h  ui_sensor_modal.c  ui_sensor_modal.h  ui_statusbar.c  ui_statusbar.h  ui_tabbar.c  ui_tabbar.h  ui_tank.c  ui_tank.h  ui_theme.c  ui_theme.h  ui_tokens.c  ui_tokens.h
main/ui/screens/: doc_scr_alarms.md  doc_scr_diagnostics.md  doc_scr_mnemonic.md  doc_scr_parameters.md  doc_scr_settings.md  doc_scr_washing.md  scr_alarms.c  scr_alarms.h  scr_diagnostics.c  scr_diagnostics.h  scr_mnemonic.c  scr_mnemonic.h  scr_parameters.c  scr_parameters.h  scr_settings.c  scr_settings.h  scr_washing.c  scr_washing.h
proto/: README.md  app.js  debug.html  index.html  settings.html  style.css  washing.html
sim/: .gitignore  CMakeLists.txt  README.md  build.sh  lv_conf.h  sim_main.c
sim/stubs/: esp_log.h
yaml/: README.md  ro_plant_colors.yaml  ro_plant_display.yaml  ro_plant_display_hw.yaml  ro_plant_fonts.yaml  ro_plant_screens.yaml  ro_plant_sensors.yaml  secrets.yaml
